# Cruise-Control-Simulation

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: Car.h  Constants.h  Controller.h  PIDController.h  Simulator.h  Terrain.h  Vehicle.h
src/: Car.cpp  Car.h  Constants.h  Controller.h  PIDController.cpp  Simulator.cpp  Simulator.h  Terrain.cpp  Vehicle.cpp  Vehicle.h  main.cpp
